Novo commit, edit, delete, add - produto

--- a/static/templates/add_produtos.html
+++ b/static/templates/add_produtos.html
@@ -52,7 +52,7 @@
 						
 
 								
-								<td align="center "><a class="btn btn-primary btn-xs" type="button" href="">Edit</a></td>
+								<td align="center "><a class="btn btn-primary btn-xs" type="button" href="{% url "edit_produtos" produto.id %}">Edit</a></td>
 								<td align="center "><a class="glyphicon glyphicon-remove" href="{% url "delete_produtos" produto.id %}"></a></td>
 								
 							
