--- a/static/static/css/bootstrap.css
+++ b/static/static/css/bootstrap.css
@@ -11,7 +11,8 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+  margin: 30;
+  padding-top: 70px;
 }
 article,
 aside,
@@ -3771,7 +3772,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
