--- a/static/templates/add_produtos.html
+++ b/static/templates/add_produtos.html
@@ -4,19 +4,38 @@
 
 
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	
-</head>
-	
-&nbsp&nbsp&nbsp
-<body>
+{% block jquery %}
+
+$('#myTab a').click(function (e) {
+  e.preventDefault()
+  $(this).tab('show')
+})
+{% endblock %}
+
+
 
 {% block content %}
 
 
+
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" role="tablist">
+  <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
+  <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
+  <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
+  <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane active" id="home">
+  	
+
+  </div>
+  <div class="tab-pane" id="profile"></div>
+  <div class="tab-pane" id="messages">...</div>
+  <div class="tab-pane" id="settings">...</div>
+</div>
 
 
 
