--- a/static/templates/navbar.html
+++ b/static/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top " role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,16 +18,17 @@
           
           <ul class="nav navbar-nav navbar-right">
 
-          {% if user.is_authenticated %}
+          {% if request.user.is_authenticated %}
 
-            <li><a href="#"><span class="glyphicon glyphicon-bell"></span></a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-exclamation-sign pull-right"></span></a></li>
             
-            <p class="navbar-text pull-right"> </p>
+            
+            
          
             
             <li class="dropdown">
 
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"> {{ myUser|capfirst }} <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle pull-left" data-toggle="dropdown"> {{ request.user|capfirst }} <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
