--- a/static/templates/cadastros.html
+++ b/static/templates/cadastros.html
@@ -17,13 +17,15 @@ $('#myTab a').click(function (e) {
 {% block content %}
 
 
+<h1 style="padding-bottom: 40px">Cadastros</h1>
+
 
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist">
-  <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
-  <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
-  <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
-  <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+  <li class="active"><a href="#home" role="tab" data-toggle="tab">Produtos</a></li>
+  <li><a href="#profile" role="tab" data-toggle="tab">Clientes</a></li>
+  <li><a href="#messages" role="tab" data-toggle="tab">Transportadoras</a></li>
+  <li><a href="#settings" role="tab" data-toggle="tab">Serviços</a></li>
 </ul>
 
 <!-- Tab panes -->
