--- a/static/templates/edit_clients.html
+++ b/static/templates/edit_clients.html
@@ -1,17 +1,14 @@
-{# {% extends 'base.html' %} #}
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
-
-
-
 {% block content %}
 
 
 
 <div class="col-sm-6 col-sm-offset-3">
-		<h2>{{form_name}}</h2>
+		<h2>Edite o produto</h2>
 
 		<form method="POST" action="">	{% csrf_token %}
-			{{ add_clients|crispy }}
+			{{ form|crispy }}
 			<input name="B" type="submit" class='btn'value="Save edit" />
 
 		</form>
