Model Shipping and ProductShip

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -49,11 +49,13 @@
         <div class='row'>
         <div class='col-lg-2 col-12'>
 
-          <div style="padding-bottom: 20px;">
-          <p><button style="vertical-align: center;" type="button" class="btn btn-success btn-block"><span style="font-size:18px; vertical-align: middle;" class="glyphicon glyphicon-usd pull-left"></span>Orçamentos</button></p>
-          <p><button type="button" class="btn btn-primary btn-block"> <span style="font-size:15px; horizontal-align: middle;" class="glyphicon glyphicon-th-list pull-left"></span>Cadastros</button></p>
+          <div style="padding-top: 110px; padding-bottom: 30px">
+          <p><button  style="vertical-align: center;" type="button" class="btn btn-success btn-block"><span style="font-size:18px; vertical-align: middle;" class="glyphicon glyphicon-usd pull-left"></span>Orçamentos</button></p>
+          <p><a href="{% url "cadastros" %}"><button type="button" class="btn btn-primary btn-block"><span style="font-size:15px; horizontal-align: middle;" class="glyphicon glyphicon-th-list pull-left"></span>Cadastros</button></a></p>
           </div>
-          
+
+
+
           <ul class='nav nav-pills nav-stacked'>
             <li><a href='/'><span class='badge pull-right'>8</span>Pendentes</a></li>
             <li><a href='/'><span class='badge pull-right'>8</span>Aceitos</a></li>
