--- a/static/templates/cadastros.html
+++ b/static/templates/cadastros.html
@@ -19,7 +19,7 @@ $('#myTab a').click(function (e) {
 
 <h1 style="padding-bottom: 40px">Cadastros</h1>
 
-
+<div>
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist">
   <li class="active"><a href="#home" role="tab" data-toggle="tab">Produtos</a></li>
@@ -32,10 +32,10 @@ $('#myTab a').click(function (e) {
 <div class="tab-content">
   <div class="tab-pane active" id="home">{% include "add_products.html" %}</div>
   <div class="tab-pane" id="profile">{% include "add_clients.html" %}</div>
-  <div class="tab-pane" id="messages">...</div>
+  <div class="tab-pane" id="messages">asdasd</div>
   <div class="tab-pane" id="settings">...</div>
 </div>
-
+</div>
 
 {% endblock %}
 
