Fix abas jquery, Transportadoras com edit e delete

--- a/static/templates/add_clients.html
+++ b/static/templates/add_clients.html
@@ -1,4 +1,4 @@
-{# {% extends 'base.html' %} #}
+
 {% load crispy_forms_tags %}
 
 
@@ -16,6 +16,7 @@
 
 		</form>
 
+	&nbsp&nbsp&nbsp	
 
 
 	<h2>Clientes Cadastrados</h2>
@@ -52,5 +53,5 @@
 
 
 		</table>
-
+	</div>
 {% endblock %}
