--- a/static/templates/cadastros.html
+++ b/static/templates/cadastros.html
@@ -23,7 +23,9 @@ $('#myTab a').click(function (e) {
   <li><a href="#home" role="tab" data-toggle="tab">Home</a></li>
   <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
   <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
-  <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+  <li><a href="#settings" role="tab" data-toggle="tab">Service</a></li>
+  <li><a href="#settings" role="tab" data-toggle="tab">Termos</a></li>
+  <li><a href="#settings" role="tab" data-toggle="tab">Garantia</a></li>
 </ul>
 
 <!-- Tab panes -->
@@ -31,7 +33,9 @@ $('#myTab a').click(function (e) {
   <div class="tab-pane active" id="home">{% include "add_products.html" %}</div>
   <div class="tab-pane" id="profile">{% include "add_clients.html" %}</div>
   <div class="tab-pane" id="messages">{% include "add_shippings.html" %}</div>
-  <div class="tab-pane" id="settings">...</div>
+  <div class="tab-pane" id="services">{% include "add_services.html" %}</div>
+  <div class="tab-pane" id="messages">{% include "add_terms.html" %}</div>
+  <div class="tab-pane" id="services">{% include "add_garantia.html" %}</div>
 </div>
 
 {% endblock %}
