--- a/static/templates/cadastros.html
+++ b/static/templates/cadastros.html
@@ -20,22 +20,22 @@ $('#myTab a').click(function (e) {
 <h1 style="padding-bottom: 40px">Cadastros</h1>
   <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist">
-  <li><a href="#home" role="tab" data-toggle="tab">Home</a></li>
-  <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
-  <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
-  <li><a href="#settings" role="tab" data-toggle="tab">Service</a></li>
-  <li><a href="#settings" role="tab" data-toggle="tab">Termos</a></li>
-  <li><a href="#settings" role="tab" data-toggle="tab">Garantia</a></li>
+  <li><a href="#home" role="tab" data-toggle="tab">Produtos</a></li>
+  <li><a href="#profile" role="tab" data-toggle="tab">Clientes</a></li>
+  <li><a href="#service" role="tab" data-toggle="tab">Serviços</a></li>
+  <li><a href="#messages" role="tab" data-toggle="tab">Transportadoras</a></li>
+  <li><a href="#terms" role="tab" data-toggle="tab">Termos</a></li>
+  <li><a href="#garantia" role="tab" data-toggle="tab">Garantia</a></li>
 </ul>
 
 <!-- Tab panes -->
 <div class="tab-content">
   <div class="tab-pane active" id="home">{% include "add_products.html" %}</div>
   <div class="tab-pane" id="profile">{% include "add_clients.html" %}</div>
+  <div class="tab-pane" id="service">{% include "add_services.html" %}</div>
   <div class="tab-pane" id="messages">{% include "add_shippings.html" %}</div>
-  <div class="tab-pane" id="services">{% include "add_services.html" %}</div>
-  <div class="tab-pane" id="messages">{% include "add_terms.html" %}</div>
-  <div class="tab-pane" id="services">{% include "add_garantia.html" %}</div>
+  <div class="tab-pane" id="terms">{% include "add_terms.html" %}</div>
+  <div class="tab-pane" id="garantia">{% include "add_garantia.html" %}</div>
 </div>
 
 {% endblock %}
