--- a/static/templates/cadastros.html
+++ b/static/templates/cadastros.html
@@ -27,6 +27,7 @@ $('#myTab a').click(function (e) {
   <li><a href="#messages" role="tab" data-toggle="tab">Transportadoras</a></li>
   <li><a href="#terms" role="tab" data-toggle="tab">Termos</a></li>
   <li><a href="#garantia" role="tab" data-toggle="tab">Garantia</a></li>
+  <li><a href="#payment" role="tab" data-toggle="tab">Pagamento</a></li>
 </ul>
 
 <!-- Tab panes -->
@@ -37,10 +38,11 @@ $('#myTab a').click(function (e) {
   <div class="tab-pane" id="messages">{% include "add_shippings.html" %}</div>
   <div class="tab-pane" id="terms">{% include "add_terms.html" %}</div>
   <div class="tab-pane" id="garantia">{% include "add_garantia.html" %}</div>
+  <div class="tab-pane" id="payment">{% include "add_payment.html" %}</div>
 </div>
 {% else %}
 <div style="text-align: center">
-<h1>Você precisa estar logado para ver isso! </h1><a href="/accounts/login/"><button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> Login</button></a>
+<h1>{{padrao}} </h1><a href="/accounts/login/"><button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user"></span> Login</button></a>
 </div>
 {% endif %}
 
